--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "company",
-  "version": "0.1.0",
+  "name": "opus",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "firebase": "^5.0.3",
@@ -8,7 +8,13 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "body-parser": "^1.15.0",
+    "collections": "^3.0.0",
+    "express": "^4.13.4",
+    "mongodb": "^2.1.16",
+    "mongoose": "^4.4.10",
+    "validator": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
